[project]
name = "tinycio"
version = "0.8.2"
authors = [
  { name="Sam Izdat", email="ghsamizdat@gmail.com" },
]
description = "A primitive, lightweight color management framework for PyTorch-involved projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "imageio>=2.31.0,<3.0.0",
  "numpy>=1.21.5,<2.0.0",
  "toml>=0.10.2,<1.0.0",
  "tqdm>=4.64.0,<5.0.0"
]

[project.scripts]
tcio-setup          = "tinycio.scripts.post_install:main_cli"
tcio-color2color    = "tinycio.scripts.color2color:main_cli"
tcio-hdr-codec      = "tinycio.scripts.hdr_codec:main_cli"
tcio-img2cube       = "tinycio.scripts.img2cube:main_cli"
tcio-white-balance  = "tinycio.scripts.white_balance:main_cli"

[tool.tinycio_about]
release = "a"

[project.urls]
Homepage = "https://sam-izdat.github.io/tinycio"
Issues = "https://github.com/Sam-Izdat/tinycio/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"